# mace

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  ASL.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  ruff.toml  script_convert.py  setup.cfg  setup.py
CG_coefficients/: CG_gen.py
Lie_groups/: Groups.py  Linear_ops.py  Reps.py  Rotations.py
Test/: test_spherical_harmonics.py
docs/: .readthedocs.yml  conf.py  index.rst  mace_field_models.md  requirements.txt
mace/: __init__.py  __version__.py  model_training.py
multihead_config/: aqm_2head.yaml  get_r_max.py  jz_ani_config_r6.0.yaml  jz_matpes_config_r6.0.yaml  jz_matpes_spice.yaml  jz_matpes_spice_omol_oc20_r6.0.yaml  jz_mp_alexandria_r6.0_median_single_head.yaml  jz_mp_and_salex_r6.0_lmdb.yaml  jz_mp_and_salex_r6.0_lmdb_6.8M.yaml  jz_mp_and_salex_stable-first_r6.0_lmdb.yaml  jz_mp_and_salex_stableonly_r6.0_lmdb.yaml  jz_mp_config_eledp_r.yaml  jz_mp_config_r5.0.yaml  jz_mp_config_r6.0.yaml  jz_mp_config_r7.0.yaml  jz_mp_highpressure_config_r6.0.yaml  jz_mp_oc_config_r6.0.yaml  jz_mp_salex_r6.0_median_single_head.yaml  jz_mp_salex_r6.0_median_single_head_full.yaml  jz_multihead_from_omat_all.yaml  jz_multihead_from_omat_all_debug.yaml  jz_oc.yaml  jz_oc_config_r6.0.yaml  jz_omat_alex_mp_refit_reduced_r6.0_lmdb.yaml  jz_omat_alex_mp_refit_repeat_r6.0_lmdb.yaml  jz_omat_alex_mp_singleheads_r6.0_lmdb.yaml  jz_omat_alex_mp_twoheads_r6.0_lmdb.yaml  jz_omat_r6.0_lmdb.yaml  jz_omat_r6.0_no_rattle_lmdb.yaml  jz_omol_spice_r6.0.yaml  jz_salex_r6.0_lmdb.yaml  jz_salex_r6.0_lmdb_6.8M.yaml  jz_spice_ani_config_r6.0.yaml  jz_spice_mp_alexandria_oc20_ani_r6.0.yaml  jz_spice_mp_config.yaml  jz_spice_mp_config_r6.0.yaml  mp_0.01.yaml  mp_0.1.yaml  mp_0.2.yaml  mp_0.4.yaml  (+6 more)
script_multihead_final_from_omat/: run_multihead_5arg.sh  run_multihead_5arg_ft.sh  save_model.slurm  train.slurm  train_interactive.sh
script_multihead_matpes_omal_oc20_spice_mptraj/: run_multihead_5arg.sh  run_multihead_5arg_attn.sh  save_model_attn.sh  train.slurm  train_attn.slurm  train_interactive.sh
script_multihead_matpes_omal_oc20_spice_mptraj_omal/: run_multihead_5arg.sh  run_multihead_5arg_attn.sh  save_model.slurm  train.slurm  train_attn.slurm  train_interactive.sh
script_multihead_mp_spice/: run_multihead_5arg.sh  run_multihead_5arg_attn.sh  save_model.slurm  train.slurm  train_attn.slurm  train_interactive.sh
script_multihead_mp_spice_from_omat/: run_multihead_5arg.sh  save_model.sh  train.slurm  train_interactive.sh
script_multihead_mp_spice_headint/: run_multihead_5arg.sh  save_model.sh  save_model.slurm  train.slurm  train_interactive.sh
script_oc/: run_multihead_5arg.sh  train.slurm  train_interactive.sh
scripts/: active_learning_md.py  convert_old_state_dict.py  create-clusters.py  create_lammps_model.py  distributed_example.sbatch  eval_configs.py  eval_mu_alpha.py  preprocess_data.py  run_checks.sh  run_md.py  run_train.py  setup_env.sh  try_load_field_fukui.py  utils.py
scripts_3bpa/: 3bpa.sbatch  3bpa.sh  mace-train-58133  mace-train-58134  mace-train-58135  mace-train-58136  mace-train-58137  mace-train-58138  mace-train-58139
scripts_activateion/: run_multihead_9arg.sh  train.slurm
scripts_adam_eps/: run_multihead_5arg.sh  train.slurm
scripts_adamscalinglaw/: run_multihead_5arg.sh  train.slurm
scripts_agnostic/: run_multihead_5arg.sh  train.slurm
scripts_alex_mp_oc20_spice_ani/: save_model.sh
scripts_alex_mp_oc20_spice_ani_small/: run_multihead_5arg.sh  save_model.sh  save_model.slurm  train.slurm
scripts_alexandria_clean/: run_multihead_5arg.sh  save_model.sh  save_model.slurm  save_model_delta.sh  save_model_delta.slurm  train.slurm
scripts_alexandria_mp_sinlge/: train.slurm  train_interactive.sh
scripts_ani_oc_exp/: run_multihead_4arg.sh  train.slurm
scripts_async_start_acync_update/: run_multihead_5arg.sh  slurm_sync_cachei_0  slurm_sync_cachei_1  slurm_sync_cachei_2  train.slurm  train_fragment_rank_rest.slurm
scripts_async_update/: run_multihead_5arg.sh  train_fragment_rank0.slurm  train_fragment_rank_rest.slurm
scripts_bs_lr_exp/: n1gpu4_train.slurm  n1gpu4_train_mponly.slurm  run_multihead.sh  run_multihead_mpb.sh  run_multihead_mpb_3args.sh  run_multihead_mpb_3args_mponly.sh  run_multihead_mpb_mponly.sh  run_multihead_slack.sh  train.slurm  train_mponly.slurm
scripts_elem_dept_r/: run_multihead_5arg.sh  train.slurm
scripts_highpressure_mp_exp/: train.slurm
scripts_layer_stacking/: save_model.slurm
scripts_loginfo/: run_multihead_5arg.sh  train.slurm
scripts_matpes_density_attn/: run_multihead_5arg.sh  run_multihead_5arg_dev.sh  train.slurm  train_interactive.sh
scripts_model_ablation/: run_multihead_5arg.sh  train.slurm
scripts_mp_and_salex_lmdb/: run_multihead_5arg.sh  run_multihead_5arg_ft.sh  run_multihead_5arg_inter.sh  save_model.sh  save_model.slurm  train.slurm  train_interactive.sh  train_interactive_mamba_env.sh
scripts_mp_and_salex_lmdb_density_e0s/: run_multihead_5arg.sh
scripts_mp_and_salex_lmdb_fix_loss/: .history_dump.txt.swp  run_multihead_5arg.sh  run_multihead_5arg_refit_e0s.sh  save_model.sh  save_model.slurm  train.slurm  train_ft.slurm  train_interactive.sh
scripts_mp_and_salex_lmdb_from_omat/: run_multihead_5arg.sh  run_multihead_5arg_inter.sh  run_multihead_5arg_v2.sh  run_multihead_5arg_v4.sh  run_multihead_5arg_v5.sh  run_multihead_5arg_v7.sh  run_multihead_5arg_v8.sh  save_model.sh  save_model_v8.sh  save_model_v8.slurm  save_model_v9.sh  save_model_v9.slurm  train.slurm  train_interactive.sh  train_interactive_mamba_env.sh
scripts_mp_and_salex_omatloss_lmdb/: run_multihead_5arg.sh  save_model.sh  save_model.slurm  train.slurm  train_change_delta.slurm
scripts_mp_cosine_step/: NOTE  run_multihead_5arg.sh  run_multihead_5arg_nosc.sh  train.slurm  train_interactive.sh
scripts_mp_density_attn/: NOTE  debug.sh  run_multihead_5arg.sh  run_multihead_5arg_rsmooth.sh  train.slurm  train_interactive.sh
scripts_mp_density_attn_new/: run_multihead_5arg.sh  train.slurm  train_interactive.sh
test/: test.sh  (+2 more)
(+431 files in other folders)
