[project]
name = "mace-torch"
dynamic = ["version"]
description = "MACE - Fast and accurate machine learning interatomic potentials with higher order equivariant message passing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.12",
    "e3nn==0.4.4",
    "numpy",
    "opt_einsum",
    "ase",
    "torch-ema",
    "prettytable",
    "matscipy",
    "h5py",
    "torchmetrics",
    "python-hostlist",
    "configargparse",
    "GitPython",
    "pyYAML",
    "tqdm",
    "lmdb",
    "orjson",
    "matplotlib",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/ACEsuit/mace"

[project.scripts]
mace_active_learning_md = "mace.cli.active_learning_md:main"
mace_create_lammps_model = "mace.cli.create_lammps_model:main"
mace_eval_configs = "mace.cli.eval_configs:main"
mace_plot_train = "mace.cli.plot_train:main"
mace_run_train = "mace.cli.run_train:main"
mace_prepare_data = "mace.cli.preprocess_data:main"
mace_finetuning = "mace.cli.fine_tuning_select:main"
mace_convert_device = "mace.cli.convert_device:main"
mace_select_head = "mace.cli.select_head:main"
mace_e3nn_cueq = "mace.cli.convert_e3nn_cueq:main"
mace_cueq_to_e3nn = "mace.cli.convert_cueq_e3nn:main"

[project.optional-dependencies]
wandb = ["wandb"]
fpsample = ["fpsample"]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "ruff",
]
schedulefree = ["schedulefree"]
les = ["les @ git+https://github.com/ChengUCB/les"]
cueq = ["cuequivariance-torch>=0.2.0"]
cueq-cuda-11 = ["cuequivariance-ops-torch-cu11>=0.2.0"]
cueq-cuda-12 = ["cuequivariance-ops-torch-cu12>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mace/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mace"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "PL", "C4", "B", "G"]
ignore = [
    "E501",     # line-too-long
    "PLR0913",  # too-many-arguments
    "PLR0917",  # too-many-positional-arguments
    "PLR0914",  # too-many-locals
    "PLR0911",  # too-many-return-statements
    "PLR0915",  # too-many-statements
    "PLR0912",  # too-many-branches
    "PLC0415",  # import-outside-toplevel
    "B023",     # function-uses-loop-variable
    "C408",     # unnecessary-collection-call
    "G004",     # logging-f-string
]

[tool.ruff.lint.per-file-ignores]
"mace/tools/torch_geometric/*" = ["ALL"]
"mace/tools/scatter.py" = ["ALL"]
