[project]
name = "mace-torch"
dynamic = ["version"]
description = "MACE - Fast and accurate machine learning interatomic potentials with higher order equivariant message passing."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=1.12",
    "e3nn==0.4.4",
    "numpy",
    "opt_einsum",
    "ase",
    "torch-ema",
    "prettytable",
    "matscipy",
    "h5py",
    "torchmetrics",
    "python-hostlist",
    "configargparse",
    "GitPython",
    "pyYAML",
    "tqdm",
    "lmdb",
    "orjson",
    "matplotlib",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/ACEsuit/mace"

[project.scripts]
mace_active_learning_md = "mace.cli.active_learning_md:main"
mace_create_lammps_model = "mace.cli.create_lammps_model:main"
mace_eval_configs = "mace.cli.eval_configs:main"
mace_plot_train = "mace.cli.plot_train:main"
mace_run_train = "mace.cli.run_train:main"
mace_prepare_data = "mace.cli.preprocess_data:main"
mace_finetuning = "mace.cli.fine_tuning_select:main"
mace_convert_device = "mace.cli.convert_device:main"
mace_select_head = "mace.cli.select_head:main"
mace_e3nn_cueq = "mace.cli.convert_e3nn_cueq:main"
mace_cueq_to_e3nn = "mace.cli.convert_cueq_e3nn:main"

[project.optional-dependencies]
wandb = ["wandb"]
fpsample = ["fpsample"]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-benchmark",
    "ruff",
]
schedulefree = ["schedulefree"]
les = ["les @ git+https://github.com/ChengUCB/les"]
cueq = ["cuequivariance-torch>=0.2.0"]
cueq-cuda-11 = ["cuequivariance-ops-torch-cu11>=0.2.0"]
cueq-cuda-12 = ["cuequivariance-ops-torch-cu12>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mace/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mace"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Rule families
  "ANN",  # flake8-annotations (not ready, require types for ALL args)
  "ARG",  # Check for unused function arguments
  "BLE",  # General catch of Exception
  "C90",  # Check for functions with a high McCabe complexity
  "COM",  # flake8-commas (conflict with line wrapper)
  "CPY",  # Missing copyright notice at top of file (need preview mode)
  "D",    # pydocstyle
  "EM",   # Format nice error messages
  "ERA",  # Check for commented-out code
  "FIX",  # Check for FIXME, TODO and other developer notes
  "FURB", # refurb (need preview mode, too many preview errors)
  "G",    # validate logging format strings
  "INP",  # Ban PEP-420 implicit namespace packages
  "N",    # pep8-naming (many var/arg names are intended)
  "NPY",  # NumPy-specific rules (TODO: enable this)
  "PTH",  # Prefer pathlib over os.path
  "S",    # flake8-bandit (TODO: enable this)
  "SLF",  # Access "private" class members
  "T20",  # Check for print/pprint
  "TD",   # TODO tags related

  # Single rules
  "B023",    # Function definition does not bind loop variable
  "B028",    # No explicit stacklevel keyword argument found
  "B904",    # Within an except clause, raise exceptions with ...
  "C408",    # unnecessary-collection-call
  "D105",    # Missing docstring in magic method
  "D205",    # 1 blank line required between summary line and description
  "D212",    # Multi-line docstring summary should start at the first line
  "DTZ003",  # TODO: fix this (issue #3791)
  "E501",    # Line too long
  "FBT001",  # Boolean-typed positional argument in function definition
  "FBT002",  # Boolean default positional argument in function
  "ISC001",  # Ignore for purpose of auto formatting
  "LOG015",  # `info()` call on root logger
  "N801",    # Invalid Name
  "PD901",   # pandas-df-variable-name
  "PERF203", # try-except-in-loop
  "PERF401", # manual-list-comprehension
  "PLR0911", # too many return statements
  "PLR0912", # too many branches
  "PLR0913", # too many arguments
  "PLR0915", # too many statements
  "PLR2004", # magic values in comparison
  "PLW2901", # Outer for loop variable overwritten by inner assignment target
  "PT013",   # pytest-incorrect-pytest-import
  "PYI024",  # Use `typing.NamedTuple` instead of `collections.namedtuple`
  "RET505",  # Unnecessary `else` after `return` statement
  "SIM105",  # Use contextlib.suppress() instead of try-except-pass
  "TRY003",  # Avoid specifying long messages outside the exception class
  "TRY300",  # Checks for return statements in try blocks
  "TRY301",  # Checks for raise statements within try blocks
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"mace/tools/torch_geometric/*" = ["ALL"]
"mace/tools/scatter.py" = ["ALL"]

[tool.isort]
split-on-trailing-comma = false
required-imports = ["from __future__ import annotations"]
skip = ["__init__.py"]