[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mace-torch"
dynamic = ["version"]
description = "MACE - Fast and accurate machine learning interatomic potentials with higher order equivariant message passing."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [
    {name = "ACEsuit development team"},
]
urls = { "Homepage" = "https://github.com/ACEsuit/mace" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=1.12",
    "e3nn==0.4.4",
    "numpy>=1.20",
    "opt_einsum",
    "ase>=3.22.0",
    "torch-ema",
    "prettytable",
    "matscipy",
    "h5py>=3.0",
    "torchmetrics",
    "python-hostlist",
    "configargparse",
    "GitPython",
    "pyYAML",
    "tqdm",
    "lmdb",
    "orjson",
    "matplotlib>=3.3.0",
    "pandas>=1.1.0",
]

[project.optional-dependencies]
wandb = ["wandb"]
fpsample = ["fpsample"]
dev = [
    "ruff",
    "mypy",
    "pylint",
    "pre-commit",
    "mace-torch[test]",
]
test = [
    "pytest",
    "pytest-benchmark",
    "pytest-split",
    "pytest-xdist",
    "pytest-cov",
]
schedulefree = ["schedulefree"]
cueq = ["cuequivariance-torch>=0.2.0"]
cueq-cuda-11 = ["cuequivariance-ops-torch-cu11>=0.2.0"]
cueq-cuda-12 = ["cuequivariance-ops-torch-cu12>=0.2.0"]

[project.scripts]
mace_active_learning_md = "mace.cli.active_learning_md:main"
mace_create_lammps_model = "mace.cli.create_lammps_model:main"
mace_eval_configs = "mace.cli.eval_configs:main"
mace_plot_train = "mace.cli.plot_train:main"
mace_run_train = "mace.cli.run_train:main"
mace_prepare_data = "mace.cli.preprocess_data:main"
mace_finetuning_select = "mace.cli.fine_tuning_select:main"
mace_convert_device = "mace.cli.convert_device:main"
mace_select_head = "mace.cli.select_head:main"
mace_e3nn_cueq = "mace.cli.convert_e3nn_cueq:main"
mace_cueq_to_e3nn = "mace.cli.convert_cueq_e3nn:main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "mace.__version__"}

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "PL",   # pylint
    "N",    # pep8-naming
]
ignore = [
    "E501",    # line-too-long (handled by formatter)
    "E741",    # ambiguous-variable-name (frequently use "l" for angular momentum)
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR0917", # too-many-positional-arguments
    "PLR2004", # magic-value-comparison
    "PLC1901", # empty-string-comparison
    "PLW2901", # redefined-loop-name
    "N801",    # invalid-name (class)
    "N802",    # invalid-name (function)
    "N803",    # invalid-name (argument)
    "N806",    # invalid-name (variable)
    "N812",    # invalid-name (lowercase-imported-as-non-lowercase)
    "D100",    # missing-module-docstring
    "D101",    # missing-class-docstring
    "D102",    # missing-function-docstring
    "D103",    # missing-public-function-docstring
    "D104",    # missing-package-docstring
    "D105",    # missing-magic-method-docstring
    "D107",    # missing-init-docstring
    "C408",    # use-dict-literal
    "B023",    # cell-var-from-loop
    "PLC0415", # import-outside-toplevel
]

[tool.ruff.lint.isort]
known-first-party = ["mace"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "mace.tools.torch_geometric.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "mace.tools.scatter"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "setuptools.*",
    "e3nn.*",
    "scipy.*",
    "ase.*",
    "prettytable.*",
    "torch_ema.*",
    "matplotlib.*",
    "pandas.*",
    "opt_einsum.*",
]
ignore_missing_imports = true
