[metadata]
name = mace
version = attr: mace.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.8
    e3nn==0.4.4
    numpy
    opt_einsum
    ase
    torch-ema
    prettytable
    # for plotting:
    matplotlib
    pandas
