[metadata]
name = mace
version = attr: mace.__version__
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.12
    e3nn==0.4.4
    numpy
    opt_einsum
    ase
    torch-ema
    prettytable
    matscipy
    h5py
    torchmetrics
    python-hostlist
    # for plotting:
    matplotlib
    pandas

[options.entry_points]
console_scripts =
    mace_active_learning_md  =  mace.cli.active_learning_md:main
    mace_create_lammps_model  =  mace.cli.create_lammps_model:main
    mace_eval_configs  =  mace.cli.eval_configs:main
    mace_plot_train  =  mace.cli.plot_train:main
    mace_run_train  =  mace.cli.run_train:main

[options.extras_require]
wandb = wandb
